# Plugins

Equalizer/: CMakeLists.txt
Equalizer/plugin/: CMakeLists.txt
Equalizer/plugin/include/: PluginEditor.h  PluginProcessor.h
Equalizer/plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
Equalizer/test/: CMakeLists.txt
Equalizer/test/source/: AudioProcessorTest.cpp
Synthesizer/: CMakeLists.txt
Synthesizer/plugin/: CMakeLists.txt
Synthesizer/plugin/include/Data/: AdsrData.h
Synthesizer/plugin/include/Synthesizer/: PluginEditor.h  PluginProcessor.h  SynthSound.h  SynthVoice.h
Synthesizer/plugin/include/UI/: AdsrComponent.h
Synthesizer/plugin/source/: PluginEditor.cpp  PluginProcessor.cpp  SynthVoice.cpp
Synthesizer/plugin/source/Data/: AdsrData.cpp
Synthesizer/plugin/source/Synthesizer/: PluginEditor.cpp  PluginProcessor.cpp  SynthVoice.cpp
Synthesizer/plugin/source/UI/: AdsrComponent.cpp
Synthesizer/test/: CMakeLists.txt
Synthesizer/test/source/: AudioProcessorTest.cpp
